# RetinaDetect

./: .replit  app.py  pyproject.toml  replit.md  requirements.txt  retina.md
Downloads/ChatWithCode_Sasken/backend/: .env  llm_module.py  main.py
Downloads/ChatWithCode_Sasken/data/chroma_db/: chroma.sqlite3
Downloads/ChatWithCode_Sasken/frontend/: package-lock.json  package.json
Downloads/ChatWithCode_Sasken/frontend/src/components/: EnhancedDashboard.tsx  InteractiveChat.tsx
Downloads/ChatWithCode_Sasken/frontend/src/services/: backendApi.ts
Downloads/ChatWithYourCode/project/: database.db  package-lock.json  package.json
Downloads/ChatWithYourCode/project/src/: App.tsx
Downloads/ChatWithYourCode/project/src/components/: MermaidDiagram.tsx
Downloads/Chat_With_Your_Code/: package-lock.json  package.json
Downloads/Chat_With_Your_Code/src/components/: Dashboard.tsx  FileUpload.tsx
models/: retinoblastoma_model.py
utils/: image_preprocessing.py  medical_info.py  staging.py  visualization.py
